# Vscodescript

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vs.bat  vs.py
todos/: main.py
todos/templates/: layout.html  todo.html
