[tool.poetry]
name = "vscodescript"
version = "0.1.0"
description = ""
authors = ["Abdelrahman Kandil <abdelrahmankandil@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyperclip = "^1.7.0"
pyautogui = "^0.9.48"
mistune = "^0.8.4"
colorama = "^0.4.3"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
