[tool.poetry]
name = "vscodescript"
version = "0.1.0"
description = ""
authors = ["Abdelrahman Kandil <abdelrahmankandil@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyperclip = "^1.7.0"
mistune = "^2.0.3"
colorama = "^0.4.3"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
